# structure-vision

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci-build.yml  ci-release.yml
grobid/: grobid_processor.py
workflows/: ci-build.yml
