[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.0.0"
commit = "true"
tag = "true"
tag_name = "v{new_version}"

#[[tool.bumpversion.files]]
#filename = "version.txt"
#search = "{current_version}"
#replace = "{new_version}"

[project]
name = "pdf-struct-viewer"
license = { file = "LICENSE" }
authors = [
    { name = "Luca Foppiano", email = "lucanoro@duck.com" },
]
maintainers = [
    { name = "Luca Foppiano", email = "lucanoro@duck.com" }
]
description = "PDF Structures viewer"
readme = "README.md"

dynamic = ['version']

[tool.setuptools_scm]

[project.urls]
Homepage = "https://document-insights.streamlit.app"
Repository = "https://github.com/lfoppiano/pdf-struct-viewer"
Changelog = "https://github.com/lfoppiano/pdf-struct-viewer/blob/main/CHANGELOG.md"